--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   plaid_flutter: ^3.1.8
+  shared_preferences: ^2.3.2
+  dio: ^5.6.0
 
 dev_dependencies:
   flutter_test:
