--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   plaid_flutter: ^3.1.8
   shared_preferences: ^2.3.2
   dio: ^5.6.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
